--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="cart-items-container">
     <div class="cart-item">
 <span class="bi bi-x-circle-fill"></span>
-<img src="images and fav icon/c1.jpg" alt="product-image">
+<img src="c1.jpg" alt="product-image">
 <div class="content">
     <h3> Cart Item 01</h3>
     <div class="price"> Rs699/-</div>
@@ -46,7 +46,7 @@
 
   <div class="cart-item">
     <span class="bi bi-x-circle-fill"></span>
-    <img src="images and fav icon/c2.jpg" alt="product-image">
+    <img src="c2.jpg" alt="product-image">
     <div class="content">
         <h3> Cart Item 02</h3>
         <div class="price"> Rs899/-</div>
@@ -55,7 +55,7 @@
 
       <div class="cart-item">
         <span class="bi bi-x-circle-fill"></span>
-        <img src="images and fav icon/c3.jpg" alt="product-image">
+        <img src="c3.jpg" alt="product-image">
         <div class="content">
             <h3> Cart Item 03</h3>
             <div class="price"> Rs999/-</div>
@@ -64,7 +64,7 @@
 
           <div class="cart-item">
             <span class="bi bi-x-circle-fill"></span>
-            <img src="images and fav icon/p4.jpg" alt="product-image">
+            <img src="p4.jpg" alt="product-image">
             <div class="content">
                 <h3> Cart Item 04</h3>
                 <div class="price"> Rs499/-</div>
@@ -92,12 +92,12 @@
     <div class="row">
 
         <div class="image">
-            <img src="images and fav icon/b1.jpg" alt="good">
-            <img src="images and fav icon/o.jpg" alt="good">
-            <img src="images and fav icon/f.jpg" alt="good">
-            <img src="images and fav icon/f.jpg" alt="good">
-            <img src="images and fav icon/e.jpg" alt="good">
-            <img src="images and fav icon/e.jpg" alt="good">
+            <img src="b1.jpg" alt="good">
+            <img src="o.jpg" alt="good">
+            <img src="f.jpg" alt="good">
+            <img src="f.jpg" alt="good">
+            <img src="e.jpg" alt="good">
+            <img src="e.jpg" alt="good">
  </div>
  <div class="content">
     <h3> What make's our coffee special</h3>
@@ -113,37 +113,37 @@
     <h1 class="heading">our <span> Menu</span></h1>
     <div class="box-container">
         <div class="box">
-<img src="images and fav icon/m1.jpg" alt="">
+<img src="m1.jpg" alt="">
 <h3> Blended Cold Coffee</h3>
 <div class="price"> Rs.149/-</div>
 <a href="#" class="btn"> Add To Cart</a>
         </div>
         <div class="box">
-            <img src="images and fav icon/m2.jpg" alt="">
+            <img src="m2.jpg" alt="">
             <h3> Biscoff Coffee Dessert</h3>
             <div class="price"> Rs.199/-</div>
             <a href="#" class="btn"> Add To Cart</a>
                     </div>
           <div class="box">
-     <img src="images and fav icon/m3.jpg" alt="">
+     <img src="m3.jpg" alt="">
       <h3> Blended Capuccino</h3>
       <div class="price"> Rs.219/-</div>
   <a href="#" class="btn"> Add To Cart</a>
      </div>
  <div class="box">
-  <img src="images and fav icon/m4.jpg" alt="">
+  <img src="m4.jpg" alt="">
   <h3> Blended Coffee</h3>
  <div class="price"> Rs.109/-</div>
   <a href="#" class="btn"> Add To Cart</a>
  </div>
  <div class="box">
-    <img src="images and fav icon/m5.jpg" alt="">
+    <img src="m5.jpg" alt="">
     <h3> Blended Walnut Coffee </h3>
    <div class="price"> Rs.169/-</div>
     <a href="#" class="btn"> Add To Cart</a>
    </div>
    <div class="box">
-    <img src="images and fav icon/m6.jpg" alt="">
+    <img src="m6.jpg" alt="">
     <h3> Blended Coffee with Fresh Cream</h3>
    <div class="price"> Rs.179/-</div>
     <a href="#" class="btn"> Add To Cart</a>
@@ -162,7 +162,7 @@
     <a href="#" class="bi bi-eye-fill" ></a> 
             </div>
 <div class="image">
-    <img src="images and fav icon/p1.jpg" alt="product">
+    <img src="p1.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Fresh Bean Coffee</h3>
@@ -183,7 +183,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p2.jpg" alt="product">
+<img src="p2.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Arabic Coffee </h3>
@@ -205,7 +205,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p3.jpg" alt="product">
+<img src="p3.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Fort</h3>
@@ -227,7 +227,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p5.jpg" alt="product">
+<img src="p5.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Mayan Gold </h3>
@@ -249,7 +249,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p6.jpg" alt="product">
+<img src="p6.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Columbia Reservia </h3>
@@ -269,7 +269,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p7.jpg" alt="product">
+<img src="p7.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Floria Mogiaana </h3>
@@ -290,7 +290,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p8.jpg" alt="product">
+<img src="p8.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Wild Forest </h3>
@@ -311,7 +311,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p9.jpg" alt="product">
+<img src="p9.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Fresh & Pure</h3>
@@ -332,7 +332,7 @@
 <a href="#" class="bi bi-eye-fill" ></a> 
     </div>
 <div class="image">
-<img src="images and fav icon/p10.jpg" alt="product">
+<img src="p10.jpg" alt="product">
 </div>
 <div class="content">
 <h3> Rise & Shine </h3>
@@ -357,7 +357,7 @@
 
 <div class="box-container">
     <div class="box">
-<img src="images and fav icon/p7.jpg" alt="" class="quote">
+<img src="p7.jpg" alt="" class="quote">
 <p>Being a coffee lover i must say it amplifies my taste buds.</p>
 <img src="images and fav icon/cu1.jpg" class="user" alt="">
 <h3> Aishwarya</h3>
@@ -371,9 +371,9 @@
     </div>
     
     <div class="box">
-        <img src="images and fav icon/c3.jpg" alt="" class="quote">
+        <img src="c3.jpg" alt="" class="quote">
         <p>Smell and taste is awesome.</p>
-        <img src="images and fav icon/cu2.jpg" class="user" alt="">
+        <img src="cu2.jpg" class="user" alt="">
         <h3> Nimita</h3>
         <div class="stars">
             <i class="bi bi-star"></i>
